tests/snapshots/run_wpt_conformance__coreml_gatherElements_float32_1D_input_and_int32_out-of-bounds_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float32 1D input and int32 out-of-bounds indices, coreml
 gatherElements :: gatherElements float32 1D input and int32 out-of-bounds indices: index 0: actual=-26.158037 expected=51.799484 ulp=2216719957 tolerance=4
  inputs: gatherElementsInput: [-26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969]; gatherElementsIndices: [7] (constant)
  expected gatherElementsOutput: [51.799484]
  actual gatherElementsOutput: [-26.158037]
  expected gatherElementsOutput full nd:
(shape [1])
[51.799484]
  actual gatherElementsOutput full nd:
(shape [1])
[-26.158037]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f32[6];
  }

  consts {
    operand_0: i32[1] @bytes([7, 0, 0, 0]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=0, label="");
  }

  outputs { gatherElementsOutput; }
}
